src/test/ui/parser/issue-14303-trait.rs
// compile-flags: -Z parse-only

trait Foo<'a, T, 'b> {}
//~^ ERROR lifetime parameters must be declared prior to type parameters
